# ai-bricks-v4

./: README.md  pyproject.toml
aibricks/: __init__.py  api_anthropic.py  api_dummy.py  api_openai.py  client.py  config.py  providers.yaml  recorder.py  usage.py
aibricks/utils/: __init__.py  db.py  image.py  namespace.py  xml.py
examples/: readme_example.py
examples/inspector/: agent_v1.py  agent_v1.yaml  st_agent_chat_v1.py
examples/memgpt/: memgpt_v1.py  memgpt_v1.yaml
tests/: common.py  test_api_anthropic.py  test_api_arliai.py  test_api_deepseek.py  test_api_dummy.py  test_api_google.py  test_api_gpt4all.py  test_api_huggingface.py  test_api_lmstudio.py  test_api_ollama.py  test_api_openai.py  test_api_openrouter.py  test_api_together.py  test_api_vllm.py  test_api_xai.py
