[project]
name = "ai-bricks-v4"
version = "0.3.0"
description = "A minimalistic toolkit for building AI applications and agents, providing unified interface to multiple AI providers"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "requests>=2.32.3",
    "yamja>=0.1.0",
    "pillow>=11.0.0",
]

[project.optional-dependencies]
test = [
    "pytest>=8.0.0",
]
examples = [
    "streamlit>=1.31.0",
    "rich>=13.7.0",
    #"pyautogui>=0.9.54",
    "mss>=10.0.0",
]

[tool.setuptools]
packages = ["aibricks"]
